# Sistema_Multiagentes-Hackathon

./: LICENSE  README.md
crewhackathon/: README.md  pyproject.toml  report.md  requeriments.txt
crewhackathon/src/crewhackathon/: config.py  crew.py  main.py
crewhackathon/src/crewhackathon/config/: agents.yaml  tasks.yaml
crewhackathon/src/crewhackathon/tools/: custom_tool.py
