[project]
name = "crewhackathon"
version = "0.1.0"
description = "CrewHackathon using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
crewhackathon = "crewhackathon.main:run"
run_crew = "crewhackathon.main:run"
train = "crewhackathon.main:train"
replay = "crewhackathon.main:replay"
test = "crewhackathon.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
